Update README file and fix a layout bug in home page
Gave more structure to the readme file, indicating the different
changes and versions this website has gone through. Also the repository
was not really centered in the home page so I fixed that.

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ ul.repository li{
     font-family: serif;
     display: inline-block;
     width: 200px;
-    margin: 0 20px;
+
+    margin-right: 40px;
 }
 
 li a {
